# cpifont

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  cpifont.cpp  dotnet.cmake
Celones.CpiFont/: CMakeLists.txt  Celones.CpiFont.csproj  CodePage.cs  CpiFile.Native.cs  CpiFile.cs  Font.cs  StreamAdapter.cs
Celones.CpiFont/Interop/: Interop+cpifont_entry_info.cs  Interop+cpifont_font_info.cs  Interop+cpifont_stream.cs  Interop.cs
app/: app.h  app.hpp  cmdump.cpp  cmglyph.cpp  cpitool.cpp  print.cpp  stream.cpp
cpifont/: CMakeLists.txt
cpifont/inc/: cpi.h  cpifont.h
cpifont/src/: common.c  entries.c  fonts.c  header.c  names.c
cpitool/cpp/: CMakeLists.txt  cmdump.cpp  cmglyph.cpp  cpitool.cpp  print.cpp  stream.cpp
cpitool/cs/: CMakeLists.txt  CpiTool.csproj
cpitool/cs/Celones.CpiFont/Interop/: Interop+cpifont_entry_info.cs  Interop+cpifont_font_info.cs  Interop+cpifont_stream.cs
cpitool/cs/CpiTool/: Main.cs
dotnet/: CMakeLists.txt  CpiTool.csproj  Interop.cs  Main.cs  Print.cs
dotnet/Celones.CpiFont/: CodePage.cs  CpiFile.Native.cs  CpiFile.cs  Enums.cs  Font.cs  StreamAdapter.cs
dotnet/Celones.CpiFont/Interop/: Interop.cs
dotnet/CpiFont/: CodePage.cs  CpiFile.Native.cs  CpiFile.Stream.cs  CpiFile.cs  Enums.cs  Extensions.cs  Font.cs  Stream.cs  StreamAdapter.cs
dotnet/CpiFont/Interop/: Interop.CheckStatus.cs  Interop.EntryInfo.cs  Interop.FontInfo.cs  Interop.Stream.cs  Interop.cs
dotnet/CpiTool/: Dump.cs  Glyph.cs  Helpers.cs  Main.cs  Stream.cs
dotnet/Interop/: Interop.FontInfo.cs  Interop.Origin.cs  Interop.Stream.cs
inc/: cpi.h  cpifont.h
lib/: CMakeLists.txt  common.c  entries.c  fonts.c  header.c  lib.h  names.c
src/: common.c  cpifont.cpp  cpitool.cpp  entries.c  fonts.c  header.c  names.c
